--- a/Sophiaformationswing/pom.xml
+++ b/Sophiaformationswing/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>fr.formation.lille.swing</groupId>
   <artifactId>formation-swing</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-0</version>
 
   <name>formation-swing</name>
   <!-- FIXME change it to the project's website -->
