--- a/formationswingOMBELINE/pom.xml
+++ b/formationswingOMBELINE/pom.xml
@@ -6,11 +6,11 @@
 
   <groupId>fr.formation.lille.swing</groupId>
   <artifactId>formation-swing</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-0</version>
 
   <name>formation-swing</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.m2iformation.fr</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
