--- a/formationswing/pom.xml
+++ b/formationswing/pom.xml
@@ -6,16 +6,16 @@
 
   <groupId>fr.formation.lille.swing</groupId>
   <artifactId>formation-swing</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-0</version>
 
   <name>formation-swing</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.m2iformation</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <lombok.version>1.16.16</lombok.version>
   </properties>
 
